[finish #37440803] Fix image alignment for gnip instances in search results

--- a/app/assets/stylesheets/instances/_instance_list.scss
+++ b/app/assets/stylesheets/instances/_instance_list.scss
@@ -1,4 +1,4 @@
-.hadoop_instance_list, .instance_list {
+.hadoop_instance_list, .instance_list, .gnip_instance_list {
     .instance_provider .details{
         @include list-section-heading;
         padding: 5px 10px;
